tests/fixtures/invalid/pow_float_str.py
# Cannot call pow() with Float, Str
x = pow(1.0, "hello")
